--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
-body{background-color: rgb(36, 34, 34);
+body{background-color: rgb(124, 20, 20);
 } 
+.engrenagem {
+    width: 5%;
+}
+
  header{display: flex;
-align-items: center
-;}
+    justify-content: space-around;
+align-items: center;
+background-color: black
+;
+}
+.caraqcriouocarro {
+    width: 18%;
+}
+.
+
+
+
+
+
+
+
+
+
+
+
+
+
+.intro {
+
+
+}
