--- a/style.css
+++ b/style.css
@@ -7,33 +7,26 @@ body{
 
  header{display: flex;
     justify-content: space-around;
-align-items: center;
-background-color: rgb(248, 241, 241)
+    align-items: center
 ;
 }
 
 
 
 img .intro {
-width: 20%;
+width: 10%;
 
 }
 
 
 .intro{
     display: flex;
+}
+ul{
+    display: flex;
     justify-content: space-evenly;
-    list-style-type: none;
+    list-style: none;
     align-items: center;
-    padding: 16px;
-}
-
-{
-    color: #200bdd;
-    text-decoration: none;
-}
-.equipe {
-
-    display: grid
+    padding: 16px
     ;
-}
+}    
