--- a/style.css
+++ b/style.css
@@ -30,3 +30,14 @@ ul{
     padding: 16px
     ;
 }    
+
+
+.coxa{
+    width: 30%;
+}
+
+#equipe{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: center;
+}
